[gd_scene load_steps=11 format=3 uid="uid://cmximkgo06n23"]

[ext_resource type="Script" path="res://game.gd" id="1_c0x7a"]
[ext_resource type="Texture2D" uid="uid://md7mxuv75xq0" path="res://assets/graphics/overload_bar_empty.png" id="2_3xqr4"]
[ext_resource type="Texture2D" uid="uid://nnc36hwt2wtw" path="res://assets/graphics/boom.png" id="2_ofl2k"]
[ext_resource type="Texture2D" uid="uid://bl5ua8y5lp3hj" path="res://assets/graphics/arrow.png" id="3_e0of6"]
[ext_resource type="Texture2D" uid="uid://dlw2xgsyblykv" path="res://assets/graphics/overload_bar_full.png" id="3_w32g3"]
[ext_resource type="Texture2D" uid="uid://gchw5bc6snq3" path="res://icon.svg" id="4_ikwam"]
[ext_resource type="Texture2D" uid="uid://b55m7xk83hhoi" path="res://assets/graphics/hp.png" id="5_rvpgg"]
[ext_resource type="Texture2D" uid="uid://dkybeqel2wytl" path="res://assets/graphics/defend.png" id="6_5okld"]
[ext_resource type="Script" path="res://reward_window.gd" id="9_djcmb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvr5r"]
bg_color = Color(0.188235, 0.192157, 0.25098, 1)

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_c0x7a")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="OverloadLabel" type="RichTextLabel" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(1, 0.870588, 0, 1)
theme_override_font_sizes/normal_font_size = 22
bbcode_enabled = true
text = "[center]OVERLOAD[/center]"
fit_content = true

[node name="OverloadBar" type="TextureProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_under = ExtResource("2_3xqr4")
texture_progress = ExtResource("3_w32g3")

[node name="OverloadBarLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer/OverloadBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -13.0
offset_top = -11.5
offset_right = 13.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "X / Y"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "AVAILABLE POWERS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AvailableContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "ACTIVE POWERS"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ActiveContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/PanelContainer2/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EndTurnButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 22
text = "ACTIVATE"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/CenterContainer/Control"]
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_ikwam")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer/CenterContainer/Control"]
texture = ExtResource("5_rvpgg")

[node name="PlayerHpLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Y"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2/CenterContainer/Control"]
texture = ExtResource("6_5okld")

[node name="DefendLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Z"

[node name="Control2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/PanelContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2/PanelContainer/CenterContainer/Control"]
texture = ExtResource("2_ofl2k")

[node name="Col0Row0" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col0Row1" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col0Row2" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col0Row3" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer3" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3/PanelContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3/PanelContainer/CenterContainer/Control"]
texture = ExtResource("3_e0of6")

[node name="Col1Row0" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col1Row1" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col1Row2" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col1Row3" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer4" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer4/PanelContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer4/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer4/PanelContainer/CenterContainer/Control"]
texture = ExtResource("3_e0of6")

[node name="Col2Row0" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col2Row1" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col2Row2" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col2Row3" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer6" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer6"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer6/PanelContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer6/PanelContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer6/PanelContainer/CenterContainer/Control"]
texture = ExtResource("3_e0of6")

[node name="Col3Row0" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col3Row1" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col3Row2" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="Col3Row3" type="CenterContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer/VBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 2

[node name="SettingsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
custom_minimum_size = Vector2(192, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 22
text = "SETTINGS"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 22
text = "QUIT"

[node name="RewardWindow" type="Window" parent="."]
unique_name_in_owner = true
title = "DISCARD"
initial_position = 1
size = Vector2i(544, 544)
visible = false
exclusive = true
borderless = true
min_size = Vector2i(544, 544)
max_size = Vector2i(544, 544)
script = ExtResource("9_djcmb")

[node name="PanelContainer" type="PanelContainer" parent="RewardWindow"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hvr5r")

[node name="MarginContainer" type="MarginContainer" parent="RewardWindow/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Label" type="Label" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "CHOOSE YOUR REWARD:"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="VBoxContainer" type="VBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="PanelContainer" type="PanelContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "RETURN ALL POWERS"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Control" type="Control" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer/CenterContainer/Control"]
texture = ExtResource("5_rvpgg")

[node name="Label" type="Label" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "- 1"

[node name="ScrollContainer" type="ScrollContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="DiscardContainer" type="VBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChooseReturnButton" type="Button" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "CHOOSE"

[node name="VBoxContainer2" type="VBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 16

[node name="PanelContainer2" type="PanelContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2"]
custom_minimum_size = Vector2(256, 0)
layout_mode = 2

[node name="Label" type="Label" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "GET NEW POWER"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Control" type="Control" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer/CenterContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer/CenterContainer/Control"]
texture = ExtResource("5_rvpgg")

[node name="Label" type="Label" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "+ 1"

[node name="ScrollContainer" type="ScrollContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="NewPowerContainer" type="VBoxContainer" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ChooseAddButton" type="Button" parent="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "CHOOSE"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/EndTurnButton" to="." method="_on_end_turn_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer2/HBoxContainer2/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="about_to_popup" from="RewardWindow" to="RewardWindow" method="_on_about_to_popup"]
[connection signal="pressed" from="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/ChooseReturnButton" to="RewardWindow" method="_on_choose_return_button_pressed"]
[connection signal="pressed" from="RewardWindow/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer2/ChooseAddButton" to="RewardWindow" method="_on_choose_add_button_pressed"]
